# oscar_robot

./: .gitignore  README.md
docs/cad/: layer_bottom.dxf  layer_middle.dxf  layer_top.dxf  realsense_mount.stl  side_front_bottom.dxf  side_front_top.dxf  side_standard_bottom.dxf  side_standard_top.dxf
docs/images/: oscar_plate_view.odp
oscar_bringup/: CMakeLists.txt  README.md  package.xml
oscar_bringup/config/: ps4_controller.yaml  robot.yaml
oscar_bringup/launch/: mapping.launch  navigation.launch  robot.launch  teleoperation.launch  visualization.launch
oscar_bringup/rviz/: navigation.rviz
oscar_bringup/udev/: 80-create.rules  create_udev_rules.sh
oscar_description/: CMakeLists.txt  README.md  package.xml
oscar_description/launch/: description.launch
oscar_description/meshes/: create_2.dae  d435.dae
oscar_description/robots/: roomba_rplidar.urdf.xacro
oscar_description/rviz/: urdf.rviz
oscar_description/urdf/oscar_base/: create_2.urdf.xacro  create_base.urdf.xacro  oscar.urdf.xacro
oscar_description/urdf/sensors/: _d435.urdf.xacro  _materials.urdf.xacro  _usb_plug.urdf.xacro  rplidar.urdf.xacro  test_d435_camera.urdf.xacro
oscar_goggles/: CMakeLists.txt  README.md  package.xml
oscar_goggles/launch/: oscar_goggles.launch
oscar_goggles/src/: facedetection.py
oscar_goggles/web/: index.html  web.sh
oscar_goggles/web/css/: animatedcircle.css  styles.css
oscar_goggles/web/js/: eyes.js
oscar_navigation/: CMakeLists.txt  README.md  package.xml
oscar_navigation/launch/: mapping.launch  navigation.launch  save_map.launch
oscar_navigation/launch/include/: amcl.launch.xml  gmapping.launch.xml  map_server.launch.xml  move_base.launch.xml
oscar_navigation/maps/: oscar_map.pgm  oscar_map.yaml
oscar_navigation/param/TEB/: costmap_common_params.yaml  global_costmap_params.yaml  global_planner_params.yaml  local_costmap_params.yaml  teb_local_planner_params.yaml
oscar_navigation/src/: pub_navpoints.py
