<?xml version="1.0"?>
<package>
  <name>oscar_navigation</name>
  <version>1.0.0</version>
  <description>The oscar_navigation package</description>

  <maintainer email="christoph.henke@ima-ifu.rwth-aachen.de">Christoph Henke</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>

  <run_depend>amcl</run_depend>
  <run_depend>map_server</run_depend>

  <run_depend>move_base</run_depend>
  <run_depend>dwa_local_planner</run_depend>
  <run_depend>teb_local_planner</run_depend>
  <run_depend>global_planner</run_depend>
  <run_depend>base_local_planner</run_depend>
  <run_depend>costmap_2d</run_depend>
  <run_depend>costmap_converter</run_depend>

  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>interactive_markers</run_depend>
  <run_depend>libg2o</run_depend>
  <run_depend>nav_core</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>tf_conversions</run_depend>
  <run_depend>visualization_msgs</run_depend>


  <export>
  </export>
</package>
